# full-terminal-platform

./: README.md  WARP.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: DraggableGrid.jsx  GridLayoutControls.jsx  LayoutManager.jsx  NewTerminalModal.jsx  ResizableBlock.jsx  ResizablePanel.jsx  ResourceMonitor.jsx  Settings.jsx  SystemMonitor.jsx  Terminal.jsx  TerminalTab.jsx
src/utils/: layoutManager.js
