[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Tauri v2 needs both lib and bin
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binary entry point
[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
encoding_rs = "0.8.34"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-log = "2"
